[package]
name = "mewah-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
fxhash = "0.2"
anyhow = "1.0"
# string-interner = "0.14"
# serde_json = "1.0"